<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_modes_fragment"
    android:tag="TAG_modes">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_colorPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="0dp">

            <com.rtugeek.android.colorseekbar.ColorSeekBar
                android:id="@+id/colorPickerBar"
                app:barHeight="25dp"
                app:colorSeeds="@array/colors"
                app:showAlphaBar="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_textRGBA"
            app:layout_constraintTop_toBottomOf="@+id/layout_colorPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/red"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/green"
                android:textSize="12sp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/blue"
                android:textSize="12sp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alpha"
                android:textSize="12sp"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_boxRGBA"
            app:layout_constraintTop_toBottomOf="@+id/layout_textRGBA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_box_r"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/red"
                android:inputType="number" />

            <EditText
                android:id="@+id/text_box_g"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/green"
                android:inputType="number" />

            <EditText
                android:id="@+id/text_box_b"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/blue"
                android:inputType="number" />

            <EditText
                android:id="@+id/text_box_alpha"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/alpha"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/button_setColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_boxRGBA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_color" />

        <Button
            android:id="@+id/button_sendData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sendData" />

    </LinearLayout>

</RelativeLayout>